2001-05-07  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml: changed some tips as suggested by
	Aaron

2001-04-25  Radek Doulik  <rodo@ximian.com>

	* editor-control-factory.c (editor_set_format): use
	schedule_redraw

	* engine.c (impl_get_paragraph_data): update for data type change
	(impl_set_paragraph_data): likewise
	(impl_set_object_data_by_type): likewise
	(impl_run_command): return boolean value
	(impl_insert_html): new method implementation
	(impl_search_by_data): ditto
	(impl_freeze): ditto
	(impl_thaw): ditto
	(impl_undo_begin): ditto
	(impl_undo_end): ditto

	* Editor.idl: added new methods, changed data type to string

2001-04-20  Radek Doulik  <rodo@ximian.com>

	* engine.c (impl_run_command): use return value from gtk_html_editor_command

2001-04-23  Jon K Hellan  <hellan@acm.org>

	* editor-control-factory.c (editor_control_factory): Make it
	compile again.

2001-04-23  Miguel de Icaza  <miguel@ximian.com>

	* editor-control-factory.c: Do not attempt to typecast NULL
	value.

2001-04-18  Radek Doulik  <rodo@ximian.com>

	* toolbar.c (setup_color_combo): as below

	* text.c (text_properties): as below

	* body.c (ADD_COLOR): use cd as context for color group (suggested
	by Jody)

2001-04-17  Radek Doulik  <rodo@ximian.com>

        * toolbar.c (setup_color_combo): as below

        * text.c (text_properties): as below

        * body.c (ADD_COLOR): updated color_combo_new calling

2001-04-17  Larry Ewing  <lewing@ximian.com>

	* control-data.h: add indent and unindent buttons.

	* toolbar.c (create_style_toolbar): store the indent and unindent
	buttons.
	(toolbar_item_update_sensitivity): update the list of valid
	widgets.
	(paragraph_style_menu_item_update): add more sensitive styles.

2001-04-16  Larry Ewing  <lewing@ximian.com>

	* toolbar.c (toolbar_item_update_sensitivity): fix prototype.
	(paragraph_style_option_menu_set_mode): add cast.

	* engine.c (impl_is_previous_paragraph_empty): fix cast.
