@@ -1,3 +1,9 @@
+2001-05-08  Radek Doulik  <rodo@ximian.com>
+
+	* search.c (gtk_html_search_dialog_new): s/backward search/backward
+
+	* menubar.c: verb EditFindRegex, not EditFindRegexp
+
 2001-05-07  Radek Doulik  <rodo@ximian.com>
 
 	* GNOME_GtkHTML_Editor.xml: changed some tips as suggested by
